trunk/Archive2/54/a2ea553641cd91/output
main.cpp:8:1: error: static assertion failed: destructor should not matter, should it?
 static_assert(std::is_nothrow_constructible<bad>(), "destructor should not matter, should it?");
 ^
